WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113350
IndexedDB: Histogram cause of LevelDB write errors
https://bugs.webkit.org/show_bug.cgi?id=113350
Summary
IndexedDB: Histogram cause of LevelDB write errors
David Grogan
Reported
2013-03-26 15:59:12 PDT
IndexedDB: Histogram cause of LevelDB write errors
Attachments
Patch
(3.69 KB, patch)
2013-03-26 16:02 PDT
,
David Grogan
no flags
Details
Formatted Diff
Diff
Patch
(3.53 KB, patch)
2013-03-26 16:22 PDT
,
David Grogan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
David Grogan
Comment 1
2013-03-26 16:02:21 PDT
Created
attachment 195178
[details]
Patch
David Grogan
Comment 2
2013-03-26 16:03:49 PDT
Josh/Alec, could one of you review this?
Joshua Bell
Comment 3
2013-03-26 16:18:55 PDT
Comment on
attachment 195178
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=195178&action=review
lgtm...
> Source/WebCore/ChangeLog:8 > + If write errors are caused by IO errors then our attempts to fix open
It took me a few reads to parse this, and I'm still confused by the comment. Do you mean: distinguish write errors caused by IO from write errors caused by corruption? I'd just describe the change: add histogram for source of leveldb errors on Write in addition to Open.
David Grogan
Comment 4
2013-03-26 16:22:06 PDT
Comment on
attachment 195178
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=195178&action=review
>> Source/WebCore/ChangeLog:8 >> + If write errors are caused by IO errors then our attempts to fix open > > It took me a few reads to parse this, and I'm still confused by the comment. Do you mean: distinguish write errors caused by IO from write errors caused by corruption? > > I'd just describe the change: add histogram for source of leveldb errors on Write in addition to Open.
Changed. That is indeed what I meant.
David Grogan
Comment 5
2013-03-26 16:22:21 PDT
Created
attachment 195183
[details]
Patch
David Grogan
Comment 6
2013-03-26 16:23:26 PDT
Tony, could you review this?
WebKit Review Bot
Comment 7
2013-03-26 17:15:02 PDT
Comment on
attachment 195183
[details]
Patch Clearing flags on attachment: 195183 Committed
r146950
: <
http://trac.webkit.org/changeset/146950
>
WebKit Review Bot
Comment 8
2013-03-26 17:15:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug