IndexedDB: Histogram cause of LevelDB write errors https://bugs.webkit.org/show_bug.cgi?id=113350

Reviewed by Tony Chang.

Add histogram for source of LevelDB errors on Write in addition to
Open.

No new tests - no good way to test histogram code.

* platform/leveldb/LevelDBDatabase.cpp:
(WebCore::histogramLevelDBError):
(WebCore):
(WebCore::LevelDBDatabase::open):
(WebCore::LevelDBDatabase::write):


Canonical link: https://commits.webkit.org/131695@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146950 268f45cc-cd09-0410-ab3c-d52691b4dbfc